--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -2,7 +2,6 @@
 <RelativeLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".LoginActivity"
@@ -54,7 +53,7 @@
         android:layout_below="@id/login_or_register"
         android:layout_centerHorizontal="true"
         android:backgroundTint="@color/goodGray"
-        android:text="Відновити пароль"
+        android:text="@string/restore_password"
         android:textColor="@color/appleYellow" />
 
   </RelativeLayout>
