--- a/app/src/main/res/layout/activity_notes_list.xml
+++ b/app/src/main/res/layout/activity_notes_list.xml
@@ -31,7 +31,7 @@
             android:background="@color/goodGray"
             android:drawableStart="@drawable/search_icon_sized"
             android:ems="10"
-            android:hint="@string/search_name"
+            android:hint="@string/search"
             android:inputType="textPersonName"
             android:paddingStart="10dp"
             android:paddingEnd="0dp"
@@ -48,12 +48,11 @@
 
         <TextView
             android:id="@+id/notes_name"
-            android:layout_width="200dp"
+            android:layout_width="175dp"
             android:layout_height="wrap_content"
             android:layout_marginStart="25dp"
-            android:layout_marginEnd="25dp"
             android:fontFamily="sans-serif"
-            android:text="@string/notes_name"
+            android:text="@string/notes"
             android:textAlignment="viewStart"
             android:textColor="@color/white"
             android:textSize="30sp"
@@ -65,7 +64,8 @@
             android:layout_height="40dp"
             android:backgroundTint="@color/goodGray"
             android:fontFamily="sans-serif"
-            android:text="@string/delete_all" />
+            android:textSize="15sp"
+            android:text="@string/delete" />
     </LinearLayout>
 
     <ListView
