--- a/app/src/main/res/layout/note_item.xml
+++ b/app/src/main/res/layout/note_item.xml
@@ -21,7 +21,7 @@
             android:paddingStart="3dp"
             android:paddingEnd="3dp"
             android:textSize="18sp"
-            tools:text="folder1"
+            tools:text="note1"
             android:drawablePadding="4dp"
             app:drawableStartCompat="@drawable/note_icon_sized"
             android:clickable="false"
